# w_search_engine

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: hotkey.rs  main.rs  ui.rs
background/: Cargo.toml
background/src/: main.rs
search_engine_core/: Cargo.toml
search_engine_core/src/: db.rs  engine.rs  indexer.rs  lib.rs  model.rs  path.rs  search.rs  sqlite_schema.sql
