[package]
name = "search_engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
redb = "3.1.1"
redb-derive = "0.1.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Ioctl",
] }
windows-core = "0.62.2"
