[package]
name = "search_engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
fxhash = "0.2.1"
walkdir = "2"
rusqlite = { version = "0.39", features = ["bundled"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Ioctl",
] }
windows-core = "0.62.2"
